# balance-category-pipeline

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.dev  Makefile  Makefile.podman  README.md  class_diagram.mmd  pipeline_flowchart.mmd  pyproject.toml
.devcontainer/: devcontainer.json
.github/instructions/: metadata.md  (+1 more)
context/: candidate_categories.json  transaction_type_codes.json
scripts/: run_all_loads_orig.sh
summaries/: 2025-10-31-phase-3-test-optimization-completion.md  2025-11-16-derived-features-test-suite.md  2025-11-16-derived-features-test-suite.mmd  2025-11-16-pipeline-error-metadata.md  2025-11-16-pipeline-error-metadata.mmd  COMPLETE_STATUS_REPORT.md  DOCUMENTATION_INDEX.md  OPTIMIZATION_PROGRESS.md  PHASE_3_DETAILED_CHANGES.md  PHASE_3_EXECUTIVE_SUMMARY.md  REFACTORING_SUMMARY.md  TEST_OPTIMIZATION_README.md  TEST_OPTIMIZATION_STRATEGY.md  TODO.md  results_quality.md
tests/: conftest.py  test_ai_categorization_workflow.py  test_ai_remote_categorization_command.py  test_append_files_command.py  test_append_files_command_parameters.py  test_bank_extract_clean.py  test_command_result.py  test_context_in_pipeline_metadata.py  test_data_pipeline_always_has_collector.py  test_data_pipeline_integration.py  test_data_pipeline_metadata_integration.py  test_data_pipeline_metadata_merge.py  test_derive_statement_features.py  test_derived_features.py  test_log_quality_reporter.py  test_merge_files_command.py  test_metadata_collector.py  test_metadata_collector_with_existing.py  test_metadata_repository.py  test_metadata_step_timestamps.py  test_pipeline_configuration_simulation.py  test_pipeline_metadata.py  test_pipeline_runner_main.py  test_pipeline_runner_metadata.py  test_quality_analysis_command.py  test_quality_calculator.py  test_quality_completeness.py  test_quality_metrics.py  test_quality_reporter.py  test_quality_workflow_integration.py  test_save_file_command_parameters.py  test_step_metadata.py  test_workflows_defined.py  test_workflows_with_quality_analysis.py
(+19 files in other folders)
