[tool.poetry]
name = "balance"
version = "0.1.0"
description = "A fast containerized Python app"
authors = ["Marcos Rossini"]
packages = [
	{ include = "analyzer", from = "src" },
	{ include = "training", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.2"
python-dotenv = "^1.1.1"
prometheus_client = "*"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^4.1.0"
coverage = "^7.0.0"
pylint = "^3.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

